syntax = "proto3";
package com.game.message.proto;

import "Const.proto";

// 请求签到信息
message OPSignInfo
{
    optional int64  playerId = 1;
}

// 发送签到信息
message OPSignInfoRet
{
	optional int64  playerId = 1;//玩家id
    optional int32 round = 2;   // 轮数
    optional int32  days = 3;   // 签到次数
    optional int32 rewards = 4;   //领取奖励次数
    repeated int32 countList = 5;   // 已领取累计签到奖励id

}

// 签到/补签
message OPSignDay
{
    optional int64  playerId = 1;
}

// 签到/补签返回
message OPSignDayRet
{
    optional int64 playerId = 1;
}

// 累计签订奖励
message OPSignCount
{
    optional int64  playerId = 1;
    optional int32 countId = 2;     // 累计签到奖励id
}

// 累计签到奖励返回
message OPSignCountRet
{
    optional int64 playerId = 1;
    optional int32 countId = 2;     // 累计签到奖励id
}